[gd_scene load_steps=2 format=2]

[ext_resource path="res://texture_option/texture_option.gd" type="Script" id=1]

[node name="TextureOption" type="PanelContainer"]
margin_right = 214.0
margin_bottom = 34.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 27.0

[node name="NameEdit" type="LineEdit" parent="HBoxContainer"]
visible = false
margin_right = 86.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewButton" type="Button" parent="HBoxContainer"]
margin_right = 177.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New"

[node name="TexturePopupMenu" type="MenuButton" parent="HBoxContainer"]
margin_left = 181.0
margin_right = 200.0
margin_bottom = 20.0
text = "v"
flat = false
align = 0

[node name="ClearButton" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 156.0
margin_right = 200.0
margin_bottom = 24.0
text = "Clear"
[connection signal="pressed" from="HBoxContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="about_to_show" from="HBoxContainer/TexturePopupMenu" to="." method="_on_TexturePopupMenu_about_to_show"]
[connection signal="pressed" from="HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
